# nens-meta

./: .coveragerc  .editorconfig  .gitignore  .nens.toml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  DEVELOPMENT.md  README.md  USAGE.md  build-docs.sh  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: meta.yml  nens-meta.yml  test.yml
doc/: background.md  conf.py  config-files.md  how-to-use.md  index.md  nens_toml_example.toml  pyproject_toml_example.toml  requirements.txt  tools.md  tox.md  usage.md
nens_meta/: nens_toml.py  pyproject_toml.py  update_project.py  utils.py
nens_meta/templates/default/: DEVELOPMENT.md.j2  base_workflow.yml.j2  dependabot.yml.j2  editorconfig.j2  gitignore.j2  meta_workflow.yml.j2  pre-commit-config.yaml.j2  python_test_workflow.yml.j2  tox.ini.j2
nens_meta/tests/: test_nens_toml.py  test_pyproject_toml.py  test_scripts.py  test_update_project.py  test_utils.py
src/nens_meta/: nens_toml.py  pyproject_toml.py
src/nens_meta/templates/default/: dependabot.yml.j2  editorconfig.j2  gitignore.j2  meta_workflow.yml.j2  pre-commit-config.yaml.j2
