[build-system]
requires = ["setuptools>=68.2"]

[project]
name = "nens-meta"
description = "Basic project automation and update tool"
authors = [
    {name = "Reinout van Rees", email = "reinout.vanrees@nelen-schuurmans.nl"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer[all]",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["nens_meta"]

[tool.setuptools.dynamic]
version = {attr = "nens_meta.__version__"}

[project.scripts]
nens-update-project = "nens_meta.update_project:main"

[tool.pyright]
include = ["nens_meta"]
venvPath = "."
venv = "venv"
