[build-system]
requires = ["setuptools>=69"]

[project]
name = "nens-meta"
description = "Basic project automation and update tool"
authors = [
    {name = "Reinout van Rees", email = "reinout.vanrees@nelen-schuurmans.nl"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "Jinja2",
    "tomlkit",
    "typer[all]",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[tool.setuptools]
packages = ["nens_meta"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "nens_meta.__version__"}

[project.scripts]
nens-update-project = "nens_meta.update_project:main"

[tool.pytest.ini_options]
norecursedirs="venv .venv data doc etc *.egg-info misc var build lib include"
python_files = "test_*.py"
testpaths = "nens_meta"

[tool.coverage.run]
source = ["nens_meta"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.zest-releaser]
release = false
python-file-with-version = "nens_meta/__init__.py"

[tool.ruff]
# See https://docs.astral.sh/ruff/configuration/ for defaults.
target-version = "py310"

[tool.ruff.lint]
# Default select: ["E4", "E7", "E9", "F"]
select = ["E4", "E7", "E9", "F", "I", "UP", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["nens_meta"]

[tool.pyright]
# Pyright/pylance/vscode configuration.
# Note: if you want a different setup, you can overwrite this with a
# "pyrightconfig.json", which takes precedence.
include = "nens_meta"
venvPath = "."
venv = "venv"
