[build-system] # Whole section managed by nens-meta
requires = ["setuptools>=69"]

[project]
name = "nens-meta" # Set by nens-meta
description = "Basic project automation and update tool"
authors = [
    {name = "Reinout van Rees", email = "reinout.vanrees@nelen-schuurmans.nl"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "Jinja2",
    "tomlkit",
    "typer[all]",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
doc = [
    "sphinx>=2.1",
    "myst-parser",
]

[tool.setuptools] # Whole section managed by nens-meta
packages = ["nens_meta"]
zip-safe = false

[tool.setuptools.dynamic] # Whole section managed by nens-meta
version = {attr = "nens_meta.__version__"}
[project.scripts]
nens-update-project = "nens_meta.update_project:main"

[tool.pytest.ini_options] # Whole section managed by nens-meta
log_level = "DEBUG"
testpaths = ["nens_meta"]

[tool.coverage.run] # Whole section managed by nens-meta
source = ["nens_meta"]

[tool.coverage.report] # Whole section managed by nens-meta
show_missing = true
skip_empty = true

[tool.zest-releaser]
release = false
python-file-with-version = "nens_meta/__init__.py"

[tool.ruff] # Required: target-version
# See https://docs.astral.sh/ruff/configuration/ for defaults.
target-version = "py311"

[tool.ruff.lint] # Required: select
select = ["E4", "E7", "E9", "F", "I", "UP", "C901"]

[tool.pyright]
# Pyright/pylance/vscode configuration.
# Note: if you want a different setup, you can overwrite this with a
# "pyrightconfig.json", which takes precedence.
include = ["nens_meta"] # Set by nens-meta
venvPath = "." # Set by nens-meta
venv = ".venv" # Set by nens-meta
